maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:21: error: ';' expected but ',' found.
  if (!aMurNord(x,y) && aMurOuest(x,y)){cpt=cpt+1;setIndication(x-1,y,cpt),setIndication(x,y-1)}
                                                                          ^