maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
override def run() {numerotation()
    // Your code here
}

def numerotation(){
  var cpt = 0
  var x=0
  var y=0
  var L=getMondeLargeur()
  var H=getMondeHauteur()
  for (i <- 0 to H-1){
    for (j<- 0 to L-1){
      if (aBiscuit(i,j)){
        x=i;y=j
  setIndication(x,y,cpt)
  
      }
   }
  }
  if (!aMurNord(x,y) && aMurOuest(x,y)){cpt=cpt+1;setIndication(x-1,y,cpt),setIndication(x,y-1)}
  
}


def aMurSud():Boolean={
  var X=getX();var Y=getY() 
  return aMurNord(x,y+1)
}

def aMurEst():Boolean={
  var X=getX();var Y=getY()
  return aMurOuest(x+1,y)
}


